--- a/nethserver-samba.spec.in
+++ b/nethserver-samba.spec.in
@@ -1,7 +1,7 @@
 Summary: Nethserver specific Samba configuration files and templates
 Name: nethserver-samba
 Version: @@VERSION@@
-Release: @@RELEASE@@%{?dist}
+Release: @@RELEASE@@
 License: GPL
 Source: %{name}-%{version}.tar.gz
 BuildArch: noarch
