Removed nethserver-devtools specific version requirement

--- a/nethserver-samba.spec.in
+++ b/nethserver-samba.spec.in
@@ -5,7 +5,7 @@ Release: @@RELEASE@@
 License: GPL
 Source: %{name}-%{version}.tar.gz
 BuildArch: noarch
-BuildRequires: nethserver-devtools >= 2.3.4
+BuildRequires: nethserver-devtools
 URL: http://dev.nethesis.it/projects/%{name}
 
 Requires: nethserver-directory
