--- a/nethserver-samba.spec.in
+++ b/nethserver-samba.spec.in
@@ -14,12 +14,15 @@ Requires: samba-client >= 3.4.3
 Requires: samba-common >= 3.4.3
 Requires: samba-winbind
 Requires: tdb-tools
+Requires: cyrus-sasl-gssapi
+Requires: krb5-workstation
 
 %description
-* Samba PDC and Workstation roles
+* Samba PDC, Workstation, ADS roles
 * Integrate smb shares with ibays (shared folders)
 * CUPS support
 * WINS support
+* Active Directory GSSAPI authentication
 
 %prep
 %setup
