nethserver-samba-adsjoin event: create machine account on directory controller and initialize system keytabs and cronjobs. Refs #1746

--- a/nethserver-samba.spec.in
+++ b/nethserver-samba.spec.in
@@ -16,6 +16,7 @@ Requires: samba-winbind
 Requires: tdb-tools
 Requires: cyrus-sasl-gssapi
 Requires: krb5-workstation
+Requires: perl-Authen-Krb5
 
 %description
 * Samba PDC, Workstation, ADS roles
