--- a/nethserver-samba.spec.in
+++ b/nethserver-samba.spec.in
@@ -47,6 +47,10 @@ rm -rf $RPM_BUILD_ROOT
 %defattr(-,root,root)
 
 %changelog
+* Wed May 29 2013 Davide Principi <davide.principi@nethesis.it> - 1.3.0-1.ns6
+- Active Directory member role. Refs #1746
+- *.spec.in: Require cyrus-sasl-gssapi, krb5-workstation, perl-Authen-Krb5
+
 * Tue May  7 2013 Davide Principi <davide.principi@nethesis.it> - 1.2.1-1.ns6
 - nethserver-samba-group-sync action: check if samba idmap backend is functional before going on, and don't fail if a unix group does not exist #1870
 
