--- a/nethserver-samba.spec.in
+++ b/nethserver-samba.spec.in
@@ -47,6 +47,9 @@ rm -rf $RPM_BUILD_ROOT
 %defattr(-,root,root)
 
 %changelog
+* Mon Jun 10 2013 Davide Principi <davide.principi@nethesis.it> - 1.3.2-1.ns6
+- Disable idmap nss backend if ServerRole is ADS #1997
+
 * Mon Jun 10 2013 Davide Principi <davide.principi@nethesis.it> - 1.3.1-1.ns6
 - Fix samba share connection error NT_STATUS_ACCESS_DENIED #1997
 
