--- a/nethserver-samba.spec.in
+++ b/nethserver-samba.spec.in
@@ -47,6 +47,9 @@ rm -rf $RPM_BUILD_ROOT
 %defattr(-,root,root)
 
 %changelog
+* Thu Jul 04 2013 Davide Principi <davide.principi@nethesis.it> - 1.3.5-1.ns6
+- Fixed "value is not boolean!" warning - Bug #2039 [NethServer]
+
 * Mon Jul 01 2013 Davide Principi <davide.principi@nethesis.it> - 1.3.4-1.ns6
 - File permissions not inherited when POSIX ACL is present - Bug #2039 [NethServer]
 - Share connection error NT_STATUS_ACCESS_DENIED  - Bug #1997 [NethServer]
