--- a/nethserver-samba.spec.in
+++ b/nethserver-samba.spec.in
@@ -47,6 +47,11 @@ rm -rf $RPM_BUILD_ROOT
 %defattr(-,root,root)
 
 %changelog
+* Wed Dec 18 2013 Davide Principi <davide.principi@nethesis.it> - 1.4.0-1.ns6
+- Kerberos keytab file is missing for new services - Bug #2407 [NethServer]
+- Directory: backup service accounts passwords  - Enhancement #2063 [NethServer]
+- Service supervision with Upstart - Feature #2014 [NethServer]
+
 * Tue Jul 16 2013 Davide Principi <davide.principi@nethesis.it> - 1.3.6-1.ns6
 - Yum transaction aborted while installing nethserver-file-server group - Bug #2041 [Nethgui]
 
