--- a/.tx/config
+++ b/.tx/config
@@ -1,25 +1,25 @@
 [main]
 host = https://www.transifex.com
 
-[nethserver.nethserver-sambapot]
+[nethserver-v6.nethserver-sambapot]
 source_file = locale/nethserver-samba.pot
 source_lang = en
 type = PO
 
 
-[nethserver.User_Plugin_Samba]
+[nethserver-v6.User_Plugin_Samba]
 source_file = root/usr/share/nethesis/NethServer/Language/en/NethServer_Module_User_Plugin_Samba.php
 source_lang = en
 type = PHP_ALT_ARRAY
 
 
-[nethserver.SharedFolder_Plugin_Samba]
+[nethserver-v6.SharedFolder_Plugin_Samba]
 source_file = root/usr/share/nethesis/NethServer/Language/en/NethServer_Module_SharedFolder_Plugin_Samba.php
 source_lang = en
 type = PHP_ALT_ARRAY
 
 
-[nethserver.Workgroup]
+[nethserver-v6.Workgroup]
 source_file = root/usr/share/nethesis/NethServer/Language/en/NethServer_Module_Workgroup.php
 source_lang = en
 type = PHP_ALT_ARRAY
