--- a/ui/package.json
+++ b/ui/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "moment": "^2.24.0",
+    "v-suggestions": "^1.1.1",
     "vue": "^2.6.10",
     "vue-good-table": "^1.21.0",
     "vue-i18n": "^8.8.2",
+    "vue-js-toggle-button": "^1.3.2",
     "vue-router": "^3.0.3"
   },
   "devDependencies": {
