--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,9 @@ env:
         -e UPLOAD_DEST
         "
 
+install:
+  - bash prep-sources &> /dev/null
+
 script: >
     docker run -ti --name makerpms ${EVARS}
     --hostname b${TRAVIS_BUILD_NUMBER}.nethserver.org
